# log-hound

./: Cargo.toml  README.md
.github/workflows/: release.yml
src/: config.rs  main.rs  output.rs  time.rs
src/aws/: client.rs  logs.rs  mod.rs  multi_region.rs
src/cli/: args.rs
src/kamal/: config.rs  logs.rs  mod.rs
src/tui/: app.rs  ui.rs
