[package]
name = "log-hound"
version = "0.1.0"
edition = "2021"
description = "CLI tool for searching AWS CloudWatch Log Insights"

[dependencies]
# CLI
clap = { version = "4", features = ["derive", "env"] }

# AWS SDK
aws-config = { version = "1", features = ["behavior-version-latest"] }
aws-sdk-cloudwatchlogs = "1"

# Async runtime
tokio = { version = "1", features = ["full"] }
futures = "0.3"

# Time handling
chrono = { version = "0.4", features = ["serde"] }
regex = "1"

# Error handling
anyhow = "1"
thiserror = "1"

# Output formatting
colored = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# TUI
ratatui = "0.29"
crossterm = "0.28"
tui-textarea = "0.7"

# Config
toml = "0.8"
dirs = "5"
serde_yaml = "0.9"

# SSH for Kamal source
openssh = { version = "0.11", features = ["native-mux"] }
